Hide long regatta and more
Closes SailScores/SailScores#400
* Add date restriction fields to Series entity and update core logic
* Add unit tests for date-restricted series filtering
* Stripe Custom Amount
* Help work continues
* Enforce regatta series dates
* DateEnforced Series work with Regatta
* Calendar page added
* Filters out long regattas

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -54,6 +54,41 @@
         <script type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; fnames[6] = 'MMERGE6'; ftypes[6] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
     </div>
     <hr />
+    <h3>December 13th, 2025</h3>
+    <h5>Limitations</h5>
+    <p>
+        Every once in a while, limitations can be a good thing. Today's SailScores release adds a few limits that
+        should help scorekeepers:
+        <ul>
+          <li>Series can now have a restricted date range. This range can be a single day or more.</li>
+          <li>The list of Scoring Systems shown usually only includes Scoring Systems set up for the
+            club.
+          </li>
+        </ul>
+        Some more details on these:
+    </p>
+    <p>
+        Restricting the dates for a series shouldn't be necessary for most clubs. But if the list of
+        series when you create a race is getting too long, here's the answer. If the option to restrict
+        a series dates is selected, you must enter a start and end date for the series. After that, the
+        series will only appear as an option for races within that date range. And if a scorekeeper
+        uses the "New Race" button from the series, the race date will be set to the nearest date
+        that falls in the series date range. (Regatta Series will now default to these settings.)
+    </p>
+    <p>
+      Previously, the list of available scoring systems for a series included all the systems that a club
+      has set up as well as the base systems. But, especially with the addition of more scoring methods,
+      this list was getting ridiculously long and was not helpful. Going forward, the full list appears in
+      a few places, such as the "What if..." options. But for Series setup, the list only includes
+      Scoring Systems that have been chosen for the club. If you need an additional scoring system in the
+      Series settings, head towards the bottom of the club admin page where you can set up as many scoring
+      systems as you'd like.
+    </p>
+    <p>
+        These enhancements should help reduce options down to those that make sense for scorekeepers,
+        instead of "Every possible choice."
+    </p>
+    <br />
     <h3>November 30th, 2025</h3>
     <h5>Series on top of Series &#x1F983;</h5>
     <p>
@@ -71,8 +106,8 @@
         (Deployment slots for the techies.)
     </p>
     <p>
-      Stay tuned in the next few weeks for more enhancements to help make series and race entry
-      even easier.
+        Stay tuned in the next few weeks for more enhancements to help make series and race entry
+        even easier.
     </p>
     <br />
     <h3>May 18th, 2025</h3>
