--- a/SailScores.Web/Views/Supporter/Index.cshtml
+++ b/SailScores.Web/Views/Supporter/Index.cshtml
@@ -160,7 +160,7 @@
     <!-- Call to Action Section -->
     <div class="row mb-5 mt-4">
         <div class="col-12">
-            <div class="card bg-light border-primary">
+            <div class="card border-primary">
                 <div class="card-body text-center">
                     <h2 class="card-title text-primary">Become a Supporter</h2>
                     <p class="lead">
@@ -172,6 +172,9 @@
                         </button>
                         <button class="btn btn-outline-primary btn-lg w-100 w-md-auto" onclick="initiateStripeCheckout('yearly')">
                             <i class="fas fa-heart"></i> $60/year
+                        </button>
+                        <button class="btn btn-outline-primary btn-lg w-100 w-md-auto" onclick="initiateStripeCheckout('custom')">
+                            <i class="fas fa-heart"></i> One Time Amount
                         </button>
                     </div>
                     <p class="text-muted mt-3 mb-0">
