WIP: help section

--- a/SailScores.Web/Pages/Help/Index.cshtml
+++ b/SailScores.Web/Pages/Help/Index.cshtml
@@ -6,10 +6,9 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<p>Welcome to the SailScores help center.</p>
 <p>
     SailScores should be intuitive and easy to use without documentation.
-    But if you're curious, troubleshooting, or just want to dig deeper, these pages are here
+    But if you're curious, troubleshooting, or want to dig deeper, these pages are here
     to support you.
 </p>
 <p>
