--- a/SailScores.Web/Pages/Help/Reference.cshtml
+++ b/SailScores.Web/Pages/Help/Reference.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+@page
 @model SailScores.Web.Pages.Help.RrsScoringModel
 @{
     Layout = "/Pages/Help/_HelpLayout.cshtml";
@@ -45,6 +45,12 @@ Privacy controls (public vs. private results)
 <br />
 
 4. Technical Notes
+<br />
+Power Tip: generate a QR code for series or regatta results to post.
+<br />
+Power Tip: How to quickly enter results.
+<br />
+Power Tip: Are the speech recognition and Handwriting recognition actually useful?
 <br />
 Supported devices and browsers
 <br />
