--- a/SailScores.Web/Views/Reports/CompetitorStats.cshtml
+++ b/SailScores.Web/Views/Reports/CompetitorStats.cshtml
@@ -60,7 +60,7 @@
                                 <th>Boat Class</th>
                                 <th>Season</th>
                                 <th class="text-end">Races Participated</th>
-                                <th class="text-end">Total Boat Class Races</th>
+                                <th class="text-end">Total Class Races</th>
                                 <th class="text-end">Boats Beat</th>
                                 <th class="text-end">Participation %</th>
                             </tr>
