--- a/SailScores.Web/Views/Reports/WindAnalysis.cshtml
+++ b/SailScores.Web/Views/Reports/WindAnalysis.cshtml
@@ -11,7 +11,7 @@
     <div class="row mb-3">
         <div class="col-12 col-md-8">
             <h1>Wind Analysis</h1>
-            <p class="lead">Wind speed and direction from race days</p>
+            <p class="lead">Wind speed and direction of race days</p>
         </div>
         <div class="col-12 col-md-4 d-flex align-items-center justify-content-md-end">
             <a href="~/@Model.ClubInitials/Reports" class="btn btn-outline-secondary">← Back to Reports</a>
