--- a/SailScores.Web/Views/Reports/Participation.cshtml
+++ b/SailScores.Web/Views/Reports/Participation.cshtml
@@ -58,11 +58,16 @@
                 </div>
             </div>
         </div>
+        <div class="row my-3">
+            <div class="col-12">
+              <a href="~/@Model.ClubInitials/Reports/ParticipationExport?groupBy=@Model.GroupBy&startDate=@Model.StartDate?.ToString("yyyy-MM-dd")&endDate=@Model.EndDate?.ToString("yyyy-MM-dd")" class="btn btn-sm btn-outline-primary">Export as CSV</a>
+                
+            </div>
+        </div>
 
         <div class="row mt-4">
             <div class="col-12">
                 <h5>Data Table</h5>
-                <p><a href="~/@Model.ClubInitials/Reports/ParticipationExport?groupBy=@Model.GroupBy&startDate=@Model.StartDate?.ToString("yyyy-MM-dd")&endDate=@Model.EndDate?.ToString("yyyy-MM-dd")" class="btn btn-sm btn-outline-primary">Export as CSV</a></p>
                 <div class="table-responsive">
                     <table class="table table-striped table-sm">
                         <thead>
