Small phone tweak for spacing

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-<div class="row mb-5">
+<div class="row mb-md-5">
     <div class="col-md-4 d-none d-md-block">
         <div id="carouselScreenshots" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
