Stats description field removed.

--- a/SailScores.Web/Views/Reports/Index.cshtml
+++ b/SailScores.Web/Views/Reports/Index.cshtml
@@ -56,5 +56,18 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-md-4 mb-3">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <a href="~/@Model.ClubInitials/Reports/ClubStats" class="text-decoration-none">Club Statistics</a>
+                    </h5>
+                    <p class="card-text">
+                        General statistics about the club including competitors, races, and starts per season.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
