--- a/SailScores.Web/Views/Reports/ClubStats.cshtml
+++ b/SailScores.Web/Views/Reports/ClubStats.cshtml
@@ -19,7 +19,7 @@
             <p class="lead">General statistics about the club including competitors, races, and starts per season</p>
         </div>
         <div class="col-12 col-md-4 d-flex align-items-center justify-content-md-end">
-            <a href="~/@Model.Initials/Reports" class="btn btn-outline-secondary">← Back to Reports</a>
+            <a href="~/@Model.Initials/Reports" class="btn btn-outline-secondary"><i class="fas fa-arrow-left"></i> Back to Reports</a>
         </div>
     </div>
 
