--- a/SailScores.Web/Views/Reports/Index.cshtml
+++ b/SailScores.Web/Views/Reports/Index.cshtml
@@ -17,7 +17,7 @@
 
     <div class="row mt-4">
         <div class="col-md-4 mb-3">
-            <div class="card h-100">
+            <div class="h-100">
                 <div class="card-body">
                     <h5 class="card-title">
                         <a href="~/@Model.ClubInitials/Reports/WindAnalysis" class="text-decoration-none">Wind Analysis</a>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="col-md-4 mb-3">
-            <div class="card h-100">
+            <div class="h-100">
                 <div class="card-body">
                     <h5 class="card-title">
                         <a href="~/@Model.ClubInitials/Reports/CompetitorStats" class="text-decoration-none">Competitor Statistics</a>
@@ -44,7 +44,7 @@
         </div>
 
         <div class="col-md-4 mb-3">
-            <div class="card h-100">
+            <div class="h-100">
                 <div class="card-body">
                     <h5 class="card-title">
                         <a href="~/@Model.ClubInitials/Reports/Participation" class="text-decoration-none">Participation Trends</a>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="col-md-4 mb-3">
-            <div class="card h-100">
+            <div class="h-100">
                 <div class="card-body">
                     <h5 class="card-title">
                         <a href="~/@Model.ClubInitials/Reports/ClubStats" class="text-decoration-none">Club Statistics</a>
