--- a/SailScores.Web/Views/Reports/WindAnalysis.cshtml
+++ b/SailScores.Web/Views/Reports/WindAnalysis.cshtml
@@ -14,7 +14,7 @@
             <p class="lead">Wind speed and direction of race days</p>
         </div>
         <div class="col-12 col-md-4 d-flex align-items-center justify-content-md-end">
-            <a href="~/@Model.ClubInitials/Reports" class="btn btn-outline-secondary">← Back to Reports</a>
+            <a href="~/@Model.ClubInitials/Reports" class="btn btn-outline-secondary"><i class="fas fa-arrow-left"></i> Back to Reports</a>
         </div>
     </div>
 
@@ -60,7 +60,8 @@
     else
     {
         <div class="alert alert-info">
-            No wind data available for the selected date range.
+            No wind data available for the selected date range. Make sure to set club
+            location to capture weather information. 
         </div>
     }
 </div>
