--- a/SailScores.Web/Views/Reports/CompetitorStats.cshtml
+++ b/SailScores.Web/Views/Reports/CompetitorStats.cshtml
@@ -14,7 +14,7 @@
             <p class="lead">Participation and performance metrics</p>
         </div>
         <div class="col-12 col-md-4 d-flex align-items-center justify-content-md-end">
-            <a href="~/@Model.ClubInitials/Reports" class="btn btn-outline-secondary">← Back to Reports</a>
+            <a href="~/@Model.ClubInitials/Reports" class="btn btn-outline-secondary"><i class="fas fa-arrow-left"></i> Back to Reports</a>
         </div>
     </div>
 
