--- a/SailScores.Web/Pages/Help/_HelpLayout.cshtml
+++ b/SailScores.Web/Pages/Help/_HelpLayout.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+@using SailScores.Web.Services
+@inject AppSettingsService SettingsService
+@{
+    // TODO: Temporary — enable supporter features in main layout for Help pages. Remove after ~2 weeks.
+    ViewBag.ShowSupporterFeatures = SettingsService.ShowSupporterFeatures;
     // Use the main site layout for header/footer/navigation bar
     Layout = "/Views/Shared/_Layout.cshtml";
 }
